Add getter, list, len and dev functions tests Move README.md -> README.rst

--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ url = https://github.com/mediapills/dicontainer
 author = Andriy Yatskovets
 author_email = andriy.yatskovets@gmail.com
 description = A small Python dependency injection container
-long_description = file: README.md
+long_description = file: README.rst
 long_description_content_type = test/x-rst
 classifiers =
     Programming Language :: Python
