--- a/tox.ini
+++ b/tox.ini
@@ -11,6 +11,7 @@ usedevelop =
 
 [testenv:py38]
 deps =
+    parameterized==0.8.1
     pytest==5.3.5
 commands =
     pytest -q {posargs}
@@ -18,6 +19,7 @@ commands =
 [testenv:coverage]
 deps =
     coverage==5.5
+    parameterized==0.8.1
     pytest==5.3.5
     pytest-cov==2.11.1
 basepython =
