Implement protect, raw and frozen

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,6 +1,6 @@
 [metadata]
-name = mediapills.dicontainer
-url = https://github.com/mediapills/dicontainer
+name = mediapills.dependency_injection
+url = https://github.com/mediapills/dependency_injection
 author = Andriy Yatskovets
 author_email = andriy.yatskovets@gmail.com
 description = A small Python dependency injection container
