Add more functions

--- a/pyrightconfig.json
+++ b/pyrightconfig.json
@@ -7,12 +7,5 @@
 		"**/__pycache__"
 	],
 	"reportMissingImports": false,
-	"reportUnknownArgumentType": false,
-	"reportUnknownMemberType": false,
-	"reportUnknownParameterType": false,
-	"reportUnknownVariableType": false,
-	"reportUntypedBaseClass": false,
-	"reportUntypedClassDecorator": false,
-	"reportGeneralTypeIssues": "warning",
-	"typeCheckingMode": "strict"
+	"reportUnknownLambdaType": false
 }
