--- a/setup.cfg
+++ b/setup.cfg
@@ -5,7 +5,7 @@ author = Andriy Yatskovets
 author_email = andriy.yatskovets@gmail.com
 description = A small Python dependency injection container
 long_description = file: README.rst
-long_description_content_type = test/x-rst
+long_description_content_type = text/x-rst
 classifiers =
     Programming Language :: Python
 
@@ -14,7 +14,7 @@ packages = find:
 package_dir =
     =src
 include_package_data = true
-python_requires = >= 3.6
+python_requires = >= 3.8
 
 
 [options.packages.find]
