--- a/tox.ini
+++ b/tox.ini
@@ -60,6 +60,9 @@ commands =
 [testenv:build]
 deps =
     build==0.6.0
+    twine==3.4.2
 commands =
 ;	python setup.py sdist bdist_wheel
 	python -m build --wheel
+    twine check dist/*
+;    python3 -m twine upload --repository pypi dist/*
