--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,16 @@ description = A small Python dependency injection container
 long_description = file: README.rst
 long_description_content_type = text/x-rst
 classifiers =
-    Programming Language :: Python
+    Development Status :: 2 - Pre-Alpha
+    Intended Audience :: Developers
+    Intended Audience :: Education
+    Programming Language :: Python :: 3.8
+    License :: OSI Approved :: MIT License
+    Topic :: Software Development :: Libraries :: Application Frameworks
+
+project_urls =
+    Bug Tracker=https://github.com/mediapills/dependency-injection/issues
+    Source Code=https://github.com/mediapills/dependency-injection
 
 [options]
 packages = find:
