Init py_versions badge

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,6 +10,8 @@ classifiers =
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
     Intended Audience :: Education
+    Programming Language :: Python
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.8
     License :: OSI Approved :: MIT License
     Topic :: Software Development :: Libraries :: Application Frameworks
