--- a/tox.ini
+++ b/tox.ini
@@ -3,13 +3,37 @@ isolated_build =
     True
 
 envlist =
+    py36
+    py37
     py38
+    py39
 
 [testenv]
 usedevelop =
     true
 
+[testenv:py36]
+deps =
+    parameterized==0.8.1
+    pytest==5.3.5
+commands =
+    pytest -q {posargs}
+
+[testenv:py37]
+deps =
+    parameterized==0.8.1
+    pytest==5.3.5
+commands =
+    pytest -q {posargs}
+
 [testenv:py38]
+deps =
+    parameterized==0.8.1
+    pytest==5.3.5
+commands =
+    pytest -q {posargs}
+
+[testenv:py39]
 deps =
     parameterized==0.8.1
     pytest==5.3.5
