--- a/setup.cfg
+++ b/setup.cfg
@@ -12,7 +12,10 @@ classifiers =
     Intended Audience :: Education
     Programming Language :: Python
     Programming Language :: Python :: 3 :: Only
+    Programming Language :: Python :: 3.6
+    Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
+    Programming Language :: Python :: 3.9
     License :: OSI Approved :: MIT License
     Topic :: Software Development :: Libraries :: Application Frameworks
 
@@ -25,7 +28,7 @@ packages = find:
 package_dir =
     =src
 include_package_data = true
-python_requires = >= 3.8
+python_requires = >= 3.5
 
 
 [options.packages.find]
