--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   checks:
-    name: Check source code
+    name: Static source code checks/validation
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -25,30 +25,54 @@ jobs:
         python -m pip install --upgrade pip
         python -m pip install --upgrade tox
 
-    - name: Run pre-commit hooks
+    - name: Static Code checks/validation
       run: |
         make pre-commit
-
-    - name: Python style guide enforcement
-      run: |
         make linter
-
-    - name: Static Typing checks
-      run: |
         make mypy
 
-  test_py36:
-    name: Run Tests on Python 3.6
+  tests:
+    name: Run Unit Tests
     runs-on: ubuntu-latest
     needs: checks
+    strategy:
+      matrix:
+        os: [macos-latest, ubuntu-latest]
+        python-version: [3.6, 3.7, 3.8, 3.9]
+        exclude:
+          # conserve some osx builders
+          - python-version: 3.6
+            os: macos-latest
+          # conserve some osx builders
+          - python-version: 3.9
+            os: macos-latest
+        include:
+          - python-version: 3.6
+            os: ubuntu-latest
+            tox-target: py36
+          - python-version: 3.7
+            os: ubuntu-latest
+            tox-target: py37
+          - python-version: 3.8
+            os: ubuntu-latest
+            tox-target: py38
+          - python-version: 3.9
+            os: ubuntu-latest
+            tox-target: py39
+          - python-version: 3.7
+            os: macos-latest
+            tox-target: py37
+          - python-version: 3.8
+            os: macos-latest
+            tox-target: py38
 
     steps:
     - uses: actions/checkout@v2
 
-    - name: Set up Python 3.6
+    - name: Set up Python
       uses: actions/setup-python@v2
       with:
-        python-version: 3.6
+        python-version: ${{ matrix.python-version }}
 
     - name: Install dependencies
       run: |
@@ -57,102 +81,15 @@ jobs:
 
     - name: Run unit tests
       env:
-        TOXENV: py36
+        TOXENV: ${{ matrix.tox-target }}
       run: |
         make test
 
-    - name: Check package build
-      run: |
-        make build
-
-  test_py37:
-    name: Run Tests on Python 3.7
-    runs-on: ubuntu-latest
-    needs: checks
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Python 3.7
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.7
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade tox
-
-    - name: Run unit tests
-      env:
-        TOXENV: py37
-      run: |
-        make test
-
-    - name: Check package build
-      run: |
-        make build
-
-  test_py38:
-    name: Run Tests on Python 3.8
-    runs-on: ubuntu-latest
-    needs: checks
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Python 3.8
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.8
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade tox
-
-    - name: Run unit tests
-      env:
-        TOXENV: py38
-      run: |
-        make test
-
-    - name: Check package build
-      run: |
-        make build
-
-  test_py39:
-    name: Run Tests on Python 3.9
-    runs-on: ubuntu-latest
-    needs: checks
-
-    steps:
-    - uses: actions/checkout@v2
-
-    - name: Set up Python 3.9
-      uses: actions/setup-python@v2
-      with:
-        python-version: 3.9
-
-    - name: Install dependencies
-      run: |
-        python -m pip install --upgrade pip
-        python -m pip install --upgrade tox
-
-    - name: Run unit tests
-      env:
-        TOXENV: py39
-      run: |
-        make test
-
-    - name: Check package build
-      run: |
-        make build
 
   coverage:
-    name: Check code coverage on Python 3.8
+    name: Check python source code coverage
     runs-on: ubuntu-latest
-    needs: [test_py36, test_py37, test_py38, test_py39]
+    needs: tests
 
     steps:
     - uses: actions/checkout@v2
