--- a/setup.cfg
+++ b/setup.cfg
@@ -6,6 +6,9 @@ author_email = andriy.yatskovets@gmail.com
 description = A small Python dependency injection container
 long_description = file: README.rst
 long_description_content_type = text/x-rst
+keywords = 'Dependency injection', 'DI', 'Inversion of Control', 'IoC, 'Patterns'
+license= 'MIT'
+platforms = 'any'
 classifiers =
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
@@ -24,6 +27,7 @@ project_urls =
     Source Code=https://github.com/mediapills/dependency-injection
 
 [options]
+zip_safe = True
 packages = find:
 package_dir =
     =src
