Init publish git workflows

--- a/setup.cfg
+++ b/setup.cfg
@@ -10,20 +10,23 @@ keywords = 'Dependency injection', 'DI', 'Inversion of Control', 'IoC, 'Patterns
 license= 'MIT'
 platforms = 'any'
 classifiers =
-    Development Status :: 2 - Pre-Alpha
+    Development Status :: 3 - Alpha
     Intended Audience :: Developers
     Intended Audience :: Education
     License :: OSI Approved :: MIT License
+    License :: OSI Approved :: MIT License
     Programming Language :: Python
-    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
+    Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: Implementation
     Programming Language :: Python :: Implementation :: PyPy
+    Topic :: Software Development
+    Topic :: Software Development :: Libraries
     Topic :: Software Development :: Libraries :: Application Frameworks
-
+    Topic :: Software Development :: Libraries :: Python Modules
 project_urls =
     Bug Tracker=https://github.com/mediapills/dependency-injection/issues
     Source Code=https://github.com/mediapills/dependency-injection
