--- a/setup.cfg
+++ b/setup.cfg
@@ -13,13 +13,15 @@ classifiers =
     Development Status :: 2 - Pre-Alpha
     Intended Audience :: Developers
     Intended Audience :: Education
+    License :: OSI Approved :: MIT License
     Programming Language :: Python
     Programming Language :: Python :: 3 :: Only
     Programming Language :: Python :: 3.6
     Programming Language :: Python :: 3.7
     Programming Language :: Python :: 3.8
     Programming Language :: Python :: 3.9
-    License :: OSI Approved :: MIT License
+    Programming Language :: Python :: Implementation
+    Programming Language :: Python :: Implementation :: PyPy
     Topic :: Software Development :: Libraries :: Application Frameworks
 
 project_urls =
