--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -37,7 +37,7 @@ jobs:
     needs: checks
     strategy:
       matrix:
-        os: [macos-latest, ubuntu-latest]
+        os: [macos-latest, ubuntu-latest, windows-latest]
         python-version: [3.6, 3.7, 3.8, 3.9, pypy3]
         exclude:
           # conserve some osx builders
@@ -46,7 +46,17 @@ jobs:
           # conserve some osx builders
           - python-version: 3.9
             os: macos-latest
+
         include:
+          - python-version: 3.7
+            os: macos-latest
+            tox-target: py37
+          - python-version: 3.8
+            os: macos-latest
+            tox-target: py38
+          - python-version: pypy3
+            os: macos-latest
+            tox-target: pypy
           - python-version: 3.6
             os: ubuntu-latest
             tox-target: py36
@@ -62,14 +72,20 @@ jobs:
           - python-version: pypy3
             os: ubuntu-latest
             tox-target: pypy
+          - python-version: 3.6
+            os: windows-latest
+            tox-target: py36
           - python-version: 3.7
-            os: macos-latest
+            os: windows-latest
             tox-target: py37
           - python-version: 3.8
-            os: macos-latest
+            os: windows-latest
             tox-target: py38
+          - python-version: 3.9
+            os: windows-latest
+            tox-target: py39
           - python-version: pypy3
-            os: macos-latest
+            os: windows-latest
             tox-target: pypy
 
     steps:
