--- a/.github/workflows/code-analysis.yml
+++ b/.github/workflows/code-analysis.yml
@@ -10,7 +10,7 @@ on:
 
 jobs:
   checks:
-    name: Static source code checks/validation
+    name: Static code analysis (ubuntu-latest, 3.8)
     runs-on: ubuntu-latest
     steps:
     - uses: actions/checkout@v2
@@ -109,7 +109,7 @@ jobs:
 
 
   coverage:
-    name: Check python source code coverage
+    name: Check and push code coverage (ubuntu-latest, 3.8)
     runs-on: ubuntu-latest
     needs: tests
 
