Deprecated Injector class

--- a/tox.ini
+++ b/tox.ini
@@ -15,37 +15,37 @@ usedevelop =
 
 [testenv:py36]
 deps =
-    parameterized==0.8.1
-    pytest==5.3.5
+    -r requirements.txt
+    -r requirements-dev.txt
 commands =
     pytest -q {posargs}
 
 [testenv:py37]
 deps =
-    parameterized==0.8.1
-    pytest==5.3.5
+    -r requirements.txt
+    -r requirements-dev.txt
 commands =
     pytest -q {posargs}
 
 [testenv:py38]
 deps =
-    parameterized==0.8.1
-    pytest==5.3.5
+    -r requirements.txt
+    -r requirements-dev.txt
 commands =
     pytest -q {posargs}
 
 [testenv:py39]
 deps =
-    parameterized==0.8.1
-    pytest==5.3.5
+    -r requirements.txt
+    -r requirements-dev.txt
 commands =
     pytest -q {posargs}
 
 [testenv:coverage]
 deps =
+    -r requirements.txt
+    -r requirements-dev.txt
     coverage==5.5
-    parameterized==0.8.1
-    pytest==5.3.5
     pytest-cov==2.12.1
 basepython =
     python3
