Add readthedocs integration (#4)

--- a/tox.ini
+++ b/tox.ini
@@ -91,3 +91,10 @@ commands =
 	python -m build --wheel
     twine check dist/*
 ;    python3 -m twine upload --repository pypi dist/*
+
+[testenv:docs]
+basepython = python3
+deps =
+    -r requirements-doc.txt
+commands =
+    sphinx-build -b html docs/source/ docs/build/
