Refactor `make sphinx` command

--- a/tox.ini
+++ b/tox.ini
@@ -10,51 +10,30 @@ envlist =
     py39
 
 [testenv]
+deps =
+    -r requirements.txt
+    parameterized==0.8.1
+    pytest==5.3.5
 usedevelop =
     true
-
-[testenv:py36]
-deps =
-    -r requirements.txt
-    -r requirements-dev.txt
-commands =
-    pytest -q {posargs}
-
-[testenv:py37]
-deps =
-    -r requirements.txt
-    -r requirements-dev.txt
-commands =
-    pytest -q {posargs}
-
-[testenv:py38]
-deps =
-    -r requirements.txt
-    -r requirements-dev.txt
-commands =
-    pytest -q {posargs}
-
-[testenv:py39]
-deps =
-    -r requirements.txt
-    -r requirements-dev.txt
 commands =
     pytest -q {posargs}
 
 [testenv:coverage]
 deps =
     -r requirements.txt
-    -r requirements-dev.txt
     coverage==5.5
+    parameterized==0.8.1
+    pytest==5.3.5
     pytest-cov==2.12.1
 basepython =
     python3
 commands =
-    pytest -q --cov-report term --cov='src' --cov-fail-under=80 {posargs}
+    pytest -q --cov-report html --cov='src' --cov-fail-under=80 {posargs}
 
 [testenv:linter]
 deps =
-    flake8
+    flake8==3.9.2
 skip_install =
     true
 basepython =
@@ -74,7 +53,7 @@ commands =
 
 [testenv:pre-commit]
 deps =
-    pre-commit
+    pre-commit==2.14.1
 skip_install =
     true
 basepython =
@@ -87,14 +66,15 @@ deps =
     build==0.6.1
     twine==3.4.2
 commands =
-;	python setup.py sdist bdist_wheel
 	python -m build --wheel
     twine check dist/*
-;    python3 -m twine upload --repository pypi dist/*
 
 [testenv:docs]
-basepython = python3
+whitelist_externals =
+    make
+basepython =
+    python3
 deps =
-    -r requirements-doc.txt
+    -r docs/requirements.txt
 commands =
-    sphinx-build -b html docs/source/ docs/build/
+    make -f docs/Makefile.sphinx html
