--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -47,3 +47,16 @@ repos:
        args:
          - '--exclude'
          - 'docs/source/conf.py'
+ - repo: https://github.com/Lucas-C/pre-commit-hooks
+   rev: v1.1.10
+   hooks:
+     - id: insert-license
+       name: Add license for all Python files
+       exclude: ^docs/source/conf.py$
+       types: [python]
+       args:
+         - --comment-style
+         - "|#|"
+         - --license-filepath
+         - LICENSE.md
+         - --fuzzy-match-generates-todo
