Add service decorator tests

--- a/tox.ini
+++ b/tox.ini
@@ -29,7 +29,7 @@ deps =
 basepython =
     python3
 commands =
-    pytest -q --cov-report html --cov='src' --cov-fail-under=80 {posargs}
+    pytest -q --cov-report term --cov='src' --cov-fail-under=80 {posargs}
 
 [testenv:linter]
 deps =
